# communication-app

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.txt  meson.build
client/: IListener.h  client.cpp  client.hpp  main.cpp  meson.build
client/net1/: Listener.cpp  Listener.h
client/net2/: Listener.cpp  Listener.h
server/: main.cpp  meson.build  server.cpp  server.h  server.hpp
